<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.topten.grv.imdbtop10.StartActivity">

        <VideoView android:id="@+id/videoView"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >


            <Button
                android:id="@+id/btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="43dp"
                android:background="#00000000"
                android:text="@string/delete_table"
                android:textColor="#ffffff" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo_white"
            android:textColor="@color/white"
            android:layout_marginTop="150dp"
            android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/varela_round"
        android:text="@string/top_10_movies_everyday"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/start_reg_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="130dp"
        android:background="@drawable/button_startactivity_style"
        android:fontFamily="@font/varela_round"
        android:paddingLeft="100dp"
        android:paddingRight="100dp"
        android:text="@string/get_started"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:fontFamily="@font/varela_round"
        android:text="@string/terms"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/made_with"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/varela_round"
        android:text="@string/made_in"
        android:textColor="@color/white"
        android:textSize="12sp" />

    </RelativeLayout>

